IOS Player Card
Scrapes information from player page.

PlayerCardViewController shows image of player and a few fields.
All desired fields have been scraped, but labels still need to be added
to this controller.

--- a/IOS/perfectgame_top50hs_sample.html
+++ b/IOS/perfectgame_top50hs_sample.html
@@ -75,6 +75,7 @@
 
 <!--2016 HS Top 50
     Notice that screens with multiple pages will have a table row with page turning hrefs.
+    Scraping for tr elements will give you the inner tr elements as well as the outer tr elements.
 -->
 <table class="gridbsNoLine" cellspacing="0" align="Left" rules="all" border="1" id="ContentPlaceHolder1_gvPlayers" style="font-size:11px;border-collapse:collapse;">
     <tr class="bspaging" align="left">
